test jvm runtime